--- a/index.html
+++ b/index.html
@@ -1,13 +1,54 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nina bohon</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
+    <title>nina b.</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
+
+
 <body>
-    <h1>hello</h1>
+    <img class="background-shape-left" src="./images/shape.svg" alt="abstract shape in the background">
+    <img class="background-shape-right" src="./images/shape.svg" alt="abstract shape in the background">
+    <main>
+        <header>
+            <h1>hello my name is Nina</h1>
+        </header>
+        <section class="introduction">
+            <div class="container">
+                <p>and</p>
+            </div>
+            <div>
+                <div class="container">
+                    <p>I build fun for stuff.</p>
+                    <p>...</p>
+                    <p>I mean</p>
+                    <p>I build stuff for fun</p>
+                </div>
+                <div class="container">
+                    <p>play my games</p>
+                    <div class="links">
+                        <a href="https://ninabohon.github.io/game_rick-the-basenji">rick the basenji</a>
+                        <!-- <a href="">memory</a> -->
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h1>about me</h1>
+            <p>after getting education in communication design I found myself drawn to the digital realm rather than to
+                graphic design.
+                I started learning coding on my own and with time decided to further follow this path.
+                at the moment I am studying creative computing at university of applied sciences in st pölten, austria.
+            </p>
+        </section>
+    </main>
+
 </body>
+
 </html>
