--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="container">
                     <p>play my games</p>
                     <div class="links">
-                        <a href="/game_rick-the-basenji">rick the basenji</a>
+                        <a href="/game_rick-the-basenji/index.html">rick the basenji</a>
                         <!-- <a href="">memory</a> -->
                     </div>
                 </div>
