--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <p>play my games</p>
                     <div class="links">
                         <a href="/game_rick-the-basenji/index.html">rick the basenji</a>
-                        <!-- <a href="">memory</a> -->
+                        <a href="/game_memory/index.html">memory</a>
                     </div>
                 </div>
             </div>
