update index.html, fixing the links

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <div class="container">
                     <p>play my games</p>
                     <div class="links">
-                        <a href="/game_rick-the-basenji/index.html">rick the basenji</a>
-                        <a href="/game_memory/index.html">memory</a>
+                        <a href="/game_rick-the-basenji/">rick the basenji</a>
+                        <a href="/game_memory/">memory</a>
                     </div>
                 </div>
             </div>
