--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
+    <div class="background-shapes">
      <img class="background-shape-left" src="./images/shape.svg" alt="abstract shape in the background">
      <img class="background-shape-right" src="./images/shape.svg" alt="abstract shape in the background">
+    </div>
     <main>
         <header>
             <h1>hello my name is Nina</h1>
